--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             <li><a href="mailto:rodr.marissa@gmail.com"><i class="far fa-envelope"></i> Email</a></li>
             <li><a href="https://www.linkedin.com/in/marissarodriguez125/" target="_blank"> <i class="fab fa-linkedin"></i> LinkedIn</a></li>
             <li><a href="https://github.com/marissa-rodriguez" target="_blank"> <i class="fab fa-github-square"></i> GitHub</a></li>
+            <!-- asfsf -->
           </ul>
         </div>
       </footer>
